--- a/mongoid.yml
+++ b/mongoid.yml
@@ -3,7 +3,7 @@ development:
     default:
       hosts:
         - localhost:27017
-      database: mongo1
+      database: london2012
   options:
     raise_not_found_error: false
 
